--- a/Movie_recommender_system.ipynb
+++ b/Movie_recommender_system.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import library\n",
     "import numpy as np\n",
     "import pandas as pd"
    ]
@@ -14,18 +15,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "703fd752",
+   "id": "6ed6e518",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# load dataset\n",
     "movies = pd.read_csv('tmdb_5000_movies.csv')\n",
     "credits = pd.read_csv('tmdb_5000_credits.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "409cd473",
+   "execution_count": 5,
+   "id": "9f0be9d5",
    "metadata": {},
    "outputs": [
     {
@@ -263,19 +265,20 @@
        "4                               John Carter           6.1        2124  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# view top 10 rows\n",
     "movies.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "86aa32e3",
+   "id": "ea5543c0",
    "metadata": {},
    "outputs": [
     {
@@ -288,14 +291,157 @@
     }
    ],
    "source": [
+    "# print dataset shape\n",
     "print(movies.shape)\n",
     "print(credits.shape)"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "25706160",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# merge movies dataset and credits dataset in one file \"movies\"\n",
+    "movies = movies.merge(credits,on='title')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f36cbb9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4809, 23)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Shape after merge dataset\n",
+    "\n",
+    "movies.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "da4f7c43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Removing colunms based on our understanding (which column put on my dataset)\n",
+    "#1. genres\n",
+    "#2. id\n",
+    "#3. keywords\n",
+    "#4. title\n",
+    "#5. overview\n",
+    "#6. cast\n",
+    "#7 crew"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d7ed4e55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filtering required column and stor all data in movies dataset\n",
+    "movies = movies[['id','title','genres','keywords','overview','cast','crew']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d4fbc07e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4809, 7)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f2ad4de2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id          0\n",
+       "title       0\n",
+       "genres      0\n",
+       "keywords    0\n",
+       "overview    0\n",
+       "cast        0\n",
+       "crew        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "d7400afc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "852139d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0b39cad7",
+   "id": "b18e22e4",
    "metadata": {},
    "outputs": [],
    "source": []
